[project]
name = "travel-assistant-livekit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2025.11.12",
    "langchain>=1.1.2",
    "langchain-google-genai>=3.2.0",
    "livekit>=1.0.20",
    "livekit-agents>=1.3.6",
    "livekit-plugins-deepgram>=1.3.6",
    "livekit-plugins-google>=1.3.6",
    "livekit-plugins-openai>=1.3.6",
    "livekit-plugins-silero>=1.3.6",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
